--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body {
   overflow: hidden;
   background-color: rgb(94, 93, 93);
   display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
   margin: 8px 22px 8px 22px;
   
 }
@@ -41,6 +45,19 @@ body {
   display: none;
 }
 
+article{
+  margin-left: 22px;
+  margin-right: 22px;
+}
+
+.sticky {
+  position: fixed;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: sticky;
+  top: 15px;
+}
+
 @media screen and (max-width: 600px) {
   .nav a:not(.active) {
     display: none;
@@ -50,7 +67,7 @@ body {
     float: right;
     display: block;
   }
-  
+
   .nav :last-child {
     font-size: 14px;
     cursor: pointer;
