--- a/style.css
+++ b/style.css
@@ -46,15 +46,14 @@ body {
 }
 
 article{
+  margin-top: 100px;
   margin-left: 22px;
   margin-right: 22px;
 }
 
 .sticky {
   position: fixed;
-  position: -webkit-sticky;
-  position: -moz-sticky;
-  position: sticky;
+  width: 100%;
   top: 15px;
 }
 
@@ -66,15 +65,8 @@ article{
   .nav a.icon {
     float: right;
     display: block;
-  }
-
-  .nav :last-child {
     font-size: 14px;
     cursor: pointer;
-  }
-
-  .nav a.icon{
-    display: block;
   }
 
   .nav.responsive { 
